--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Contact</title>    
 </head>
-<body background="/assets/images/beanstalk.png">
+<body>
 
      <div class="toptop">
         <div class="topnav">
