--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>My Website</title>
 </head>
-<body background="/assets/images/beanstalk.png">
+<body>
 
      <div class="toptop">
         <div class="topnav">
