--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
-<body background="/assets/images/beanstalk.png">
+<body>
     <div class="toptop">
             <div class="topnav">
                     <a class="name" href="index.html">VU HOANG</a>
